<resources>
    <string name="app_name">CoVay_Project</string>
    <string name="title_activity_board">BoardActivity</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="hello_world">Hello world!</string>
    <string name="restart">restart</string>
    <string name="regret">regret</string>
    <string name="to_main">to main</string>
    <string name="single_player_0">Đấu với Máy (Dễ)</string>
    <string name="single_player_1">Đấu với Máy (Khó)</string>
    <string name="single_player_2">vs Com (Hard)</string>
    <string name="double_player">Đấu hai người</string>
    <string name="record">Lịch sử đấu</string>
    <string name="setting">Setting</string>
    <string name="exit">Thoát trò chơi</string>
    <string name="exit_game_content">Exit current game means give up the game. Are you sure?</string>
    <string name="exit_game_title">Warnning!!</string>
    <string name="confirm">Yes, I am sure.</string>
    <string name="cancel">Cancel</string>
    <string name="finish_game_double_n_win">Congratulation!! Black win the game.</string>
    <string name="finish_game_double_s_win">Congratulation!! White win the game.</string>
    <string name="finish_game_content_win">Congratulation!! You win the game.</string>
    <string name="finish_game_content_lose">Sorry!! You lose the game.</string>
    <string name="finish_game_title">Game Finish</string>
    <string name="finish_game_start_new">Start New Game</string>
    <string name="finish_game_back_main">Back Main Menu</string>
    <string name="prize">Congratulation!!!</string>
</resources>