<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:shrinkColumns="*"
        >
        <TableRow
            android:gravity="center_horizontal"
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="390dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/background"
                android:contentDescription="@string/prize"
                android:src="@drawable/prize" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/textView21"
                android:text=""
                style="@style/text_text"
                />
            <TextView
                android:id="@+id/textView22"
                android:typeface="serif"
                android:textStyle="bold"
                android:gravity="center"
                android:text="WIN"
                style="@style/text_text"
                />
            <TextView
                android:id="@+id/textView23"
                android:typeface="serif"
                android:textStyle="bold"
                android:gravity="center"
                android:text="LOSE"
                style="@style/text_text"
                />
            <TextView
                android:id="@+id/textView24"
                android:typeface="serif"
                android:textStyle="bold"
                android:gravity="center"
                android:text="GIVE UP"
                style="@style/text_text"
                />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/textView32"
                android:textStyle="bold"
                android:text="@string/single_player_0"
                style="@style/text_text"
                />
            <TextView
                android:id="@+id/textView33"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:text=""
                style="@style/text_text"
                />
            <TextView
                android:id="@+id/textView34"
                android:textStyle="bold"
                android:text=""
                style="@style/text_text"
                />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:textStyle="bold"
                android:id="@+id/textView41"
                android:text="@string/single_player_1"
                style="@style/text_text"/>
            <TextView
                android:gravity="center_horizontal"
                android:id="@+id/textView42" android:text=""
                style="@style/text_text"/>
            <TextView
                android:gravity="center_horizontal"
                android:id="@+id/textView43"
                android:text="" style="@style/text_text"/>
            <TextView
                android:gravity="center_horizontal"
                android:id="@+id/textView44"
                android:text=""
                style="@style/text_text"/>
        </TableRow>
        <TableRow android:id="@+id/tableRow5"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:id="@+id/textView51"
                android:text="@string/single_player_2"
                style="@style/text_text"/>
            <TextView
                android:gravity="center_horizontal"
                android:id="@+id/textView52"
                android:text="" style="@style/text_text"/>
            <TextView
                android:gravity="center_horizontal"
                android:id="@+id/textView53"
                android:text="" style="@style/text_text"/>
            <TextView
                android:gravity="center_horizontal"
                android:id="@+id/textView54"
                android:text=""
                style="@style/text_text"/>
        </TableRow>
    </TableLayout>
</LinearLayout>